rest call removed

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,20 +6,5 @@
       "service": "Lambda"
     }
   },
-  "api": {
-    "sizeapi": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "sizecalc",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    }
-  }
+  "api": {}
 }
