--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -22,18 +22,6 @@
       ]
     }
   },
-  "auth": {
-    "saajcalcenginea75e057e": {
-      "service": "Cognito",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [],
-      "customAuth": false
-    }
-  },
-  "storage": {
-    "saajdesigns": {
-      "service": "S3",
-      "providerPlugin": "awscloudformation"
-    }
-  }
+  "auth": {},
+  "storage": {}
 }
