--- a/amplify/backend/function/calcsize/src/package.json
+++ b/amplify/backend/function/calcsize/src/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.830.0",
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "nodemailer-ses-transport": "^1.5.1"
   },
   "devDependencies": {},
   "scripts": {
