--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.10",
     "aws-amplify": "^3.3.11",
     "bootstrap": "^4.5.3",
+    "nodemailer-ses-transport": "^1.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
