--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,27 +1,6 @@
 {
-  "function": {
-    "calcsize": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "api": {
-    "sizeapi": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "calcsize",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    }
-  },
+  "function": {},
+  "api": {},
   "auth": {
     "saajcalcengine61296af6": {
       "service": "Cognito",
